# tauri-plugin-torch

./: .editorconfig  .gitignore  Cargo.toml  README.md  biome.json  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  incidence.md  release-checklist.md
.github/workflows/: check-code.yml  check-format.yml  check-lint.yml  publish-npm.yml
android/: build.gradle.kts  local.properties  settings.gradle
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  TorchPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: biome.json  package.json  pnpm-lock.yaml
examples/tauri-app/android/: build.gradle.kts
examples/tauri-app/android/src/androidTest/java/: ExampleInstrumentedTest.kt
examples/tauri-app/android/src/main/java/: Example.kt  (+1 more)
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Greet.svelte
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: Torch.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check.toml  toggle.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+1 files in other folders)
