[package]
name = "tauri-plugin-torch"
version = "0.1.0"
authors = [ "SoSweetHam <ham@kodski.com>" ]
license = "MIT"
description = "A simple flash/torch control plugin for Tauri applications."
homepage = "https://kodski.com"
repository = "https://github.com/sosweetham/tauri-plugin-torch"
readme = "README.md"
keywords = ["tauri", "plugin", "torch", "flash", "camera", "light"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-torch"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-build = "2.2.0"
tauri-plugin = { version = "2.2.0", features = ["build"] }
